@@ -2,11 +2,10 @@ package seedu.address.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static seedu.address.logic.Messages.MESSAGE_PERSONS_LISTED_OVERVIEW;
-import static seedu.address.logic.commands.CommandTestUtil.assertCommandFailure;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
-import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.util.Collections;
@@ -28,61 +27,50 @@ import seedu.address.model.person.PersonMatchesKeywordsPredicate;
  */
 public class MeetCommandTest {
 
-    private static final String DESCRIPTION = "Project sync";
-    private static final Date MEETING_DATE = new Date("2026-04-01");
-    private static final TimeSlot MEETING_SLOT = new TimeSlot("1200-1300");
-
-    private static final PersonMatchesKeywordsPredicate MATCH_ALL_PREDICATE = createPredicate(
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList());
-
-    private static final PersonMatchesKeywordsPredicate NO_MATCH_PREDICATE = createPredicate(
-            Collections.emptyList(), Collections.singletonList("zzzzzz"),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList());
-
     @Test
-    public void constructor_nullDescription_throwsNullPointerException() {
-        assertThrows(NullPointerException.class, () -> new MeetCommand(null, MEETING_DATE, MEETING_SLOT,
-                MATCH_ALL_PREDICATE));
-    }
-
-    @Test
-    public void execute_matchingAttendees_success() {
+    public void execute_validMeetingDetails_success() {
         Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
         Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
-        MeetCommand command = new MeetCommand(DESCRIPTION, MEETING_DATE, MEETING_SLOT, MATCH_ALL_PREDICATE);
 
-        expectedModel.updateFilteredPersonList(MATCH_ALL_PREDICATE);
-        Meeting expectedMeeting = new Meeting(DESCRIPTION, MEETING_DATE, MEETING_SLOT,
-                expectedModel.getDisplayedPersonList());
+        String description = "Project sync";
+        Date date = new Date("2026-04-01");
+        TimeSlot slot = new TimeSlot("1000-1100");
+        PersonMatchesKeywordsPredicate predicate = createPredicate(
+                Collections.singletonList("Alice"),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList());
+
+        MeetCommand meetCommand = new MeetCommand(description, date, slot, predicate);
+
+        expectedModel.updateFilteredPersonList(predicate);
+        Meeting expectedMeeting = new Meeting(description, date, slot, expectedModel.getDisplayedPersonList());
         expectedModel.addMeeting(expectedMeeting);
 
-        String expectedMessage = String.format(MeetCommand.MESSAGE_SUCCESS, expectedMeeting.toNoIndexString(),
+        String expectedMessage = String.format(MeetCommand.MESSAGE_SUCCESS,
+                expectedMeeting.toNoIndexString(),
                 String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, expectedMeeting.getAttendees().size()));
 
-        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertCommandSuccess(meetCommand, model, expectedMessage, expectedModel);
+        assertEquals(1, model.getAddressBook().getMeetingList().get(0).getIndex());
     }
 
     @Test
     public void execute_noMatchingAttendees_throwsCommandException() {
         Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
-        MeetCommand command = new MeetCommand(DESCRIPTION, MEETING_DATE, MEETING_SLOT, NO_MATCH_PREDICATE);
+        MeetCommand meetCommand = new MeetCommand(
+                "Project sync",
+                new Date("2026-04-01"),
+                new TimeSlot("1000-1100"),
+                createPredicate(Collections.singletonList("NoSuchPerson"),
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        Collections.emptyList()));
 
-        assertThrows(CommandException.class, MeetCommand.MESSAGE_NO_MATCHING_ATTENDEES, () -> command.execute(model));
+        CommandException exception = assertThrows(CommandException.class, () -> meetCommand.execute(model));
+        assertEquals(MeetCommand.MESSAGE_NO_MATCHING_ATTENDEES, exception.getMessage());
         assertTrue(model.getDisplayedPersonList().isEmpty());
         assertTrue(model.getAddressBook().getMeetingList().isEmpty());
     }
@@ -90,68 +78,130 @@ public class MeetCommandTest {
     @Test
     public void execute_duplicateMeeting_throwsCommandException() {
         Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
-        Meeting existingMeeting = new Meeting(DESCRIPTION, MEETING_DATE, MEETING_SLOT,
-                List.of(model.getDisplayedPersonList().get(0)));
+        String description = "Project sync";
+        Date date = new Date("2026-04-01");
+        TimeSlot slot = new TimeSlot("1000-1100");
+        PersonMatchesKeywordsPredicate predicate = createPredicate(
+                Collections.singletonList("Alice"),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList());
+
+        model.updateFilteredPersonList(predicate);
+        Meeting existingMeeting = new Meeting(description, date, slot, model.getDisplayedPersonList());
         model.addMeeting(existingMeeting);
 
-        MeetCommand command = new MeetCommand(DESCRIPTION, MEETING_DATE, MEETING_SLOT, MATCH_ALL_PREDICATE);
+        MeetCommand meetCommand = new MeetCommand(description, date, slot, predicate);
 
-        assertCommandFailure(command, model, MeetCommand.MESSAGE_DUPLICATE_MEETING);
+        CommandException exception = assertThrows(CommandException.class, () -> meetCommand.execute(model));
+        assertEquals(MeetCommand.MESSAGE_DUPLICATE_MEETING, exception.getMessage());
+        assertEquals(1, model.getAddressBook().getMeetingList().size());
+    }
+
+    @Test
+    public void execute_nullModel_throwsNullPointerException() {
+        MeetCommand meetCommand = new MeetCommand(
+                "Project sync",
+                new Date("2026-04-01"),
+                new TimeSlot("1000-1100"),
+                createPredicate(Collections.emptyList(),
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        Collections.emptyList()));
+
+        assertThrows(NullPointerException.class, () -> meetCommand.execute(null));
+    }
+
+    @Test
+    public void constructor_nullArguments_throwsNullPointerException() {
+        Date date = new Date("2026-04-01");
+        TimeSlot slot = new TimeSlot("1000-1100");
+        PersonMatchesKeywordsPredicate predicate = createPredicate(Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList());
+
+        assertThrows(NullPointerException.class, () -> new MeetCommand(null, date, slot, predicate));
+        assertThrows(NullPointerException.class, () -> new MeetCommand("desc", null, slot, predicate));
+        assertThrows(NullPointerException.class, () -> new MeetCommand("desc", date, null, predicate));
+        assertThrows(NullPointerException.class, () -> new MeetCommand("desc", date, slot, null));
     }
 
     @Test
     public void equals() {
-        MeetCommand firstCommand = new MeetCommand(DESCRIPTION, MEETING_DATE, MEETING_SLOT, MATCH_ALL_PREDICATE);
-        MeetCommand secondCommand = new MeetCommand("Design review", MEETING_DATE, MEETING_SLOT, MATCH_ALL_PREDICATE);
+        PersonMatchesKeywordsPredicate baselinePredicate = createPredicate(
+                Collections.singletonList("Alice"),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList());
+        PersonMatchesKeywordsPredicate differentPredicate = createPredicate(
+                Collections.singletonList("Benson"),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList());
 
-        // same object -> returns true
-        assertTrue(firstCommand.equals(firstCommand));
+        MeetCommand baselineCommand = new MeetCommand("Project sync", new Date("2026-04-01"),
+                new TimeSlot("1000-1100"), baselinePredicate);
+        MeetCommand sameValuesCommand = new MeetCommand("Project sync", new Date("2026-04-01"),
+                new TimeSlot("1000-1100"), baselinePredicate);
 
-        // same values -> returns true
-        MeetCommand firstCommandCopy = new MeetCommand(DESCRIPTION, MEETING_DATE, MEETING_SLOT, MATCH_ALL_PREDICATE);
-        assertTrue(firstCommand.equals(firstCommandCopy));
+        MeetCommand differentDescriptionCommand = new MeetCommand("Design review", new Date("2026-04-01"),
+                new TimeSlot("1000-1100"), baselinePredicate);
+        MeetCommand differentDateCommand = new MeetCommand("Project sync", new Date("2026-04-02"),
+                new TimeSlot("1000-1100"), baselinePredicate);
+        MeetCommand differentTimeSlotCommand = new MeetCommand("Project sync", new Date("2026-04-01"),
+                new TimeSlot("1100-1200"), baselinePredicate);
+        MeetCommand differentPredicateCommand = new MeetCommand("Project sync", new Date("2026-04-01"),
+                new TimeSlot("1000-1100"), differentPredicate);
 
-        // different types -> returns false
-        assertFalse(firstCommand.equals(1));
+        assertTrue(baselineCommand.equals(baselineCommand));
+        assertTrue(baselineCommand.equals(sameValuesCommand));
+        assertFalse(baselineCommand.equals(1));
+        assertFalse(baselineCommand.equals(null));
 
-        // null -> returns false
-        assertFalse(firstCommand.equals(null));
-
-        // different description -> returns false
-        assertFalse(firstCommand.equals(secondCommand));
+        assertFalse(baselineCommand.equals(differentDescriptionCommand));
+        assertFalse(baselineCommand.equals(differentDateCommand));
+        assertFalse(baselineCommand.equals(differentTimeSlotCommand));
+        assertFalse(baselineCommand.equals(differentPredicateCommand));
     }
 
     @Test
     public void toStringMethod() {
-        MeetCommand command = new MeetCommand(DESCRIPTION, MEETING_DATE, MEETING_SLOT, MATCH_ALL_PREDICATE);
+        PersonMatchesKeywordsPredicate predicate = createPredicate(
+                Collections.singletonList("Alice"),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList());
+        MeetCommand meetCommand = new MeetCommand("Project sync", new Date("2026-04-01"),
+                new TimeSlot("1000-1100"), predicate);
+
         String expected = MeetCommand.class.getCanonicalName()
-                + "{description=" + DESCRIPTION
-                + ", meetingDate=" + MEETING_DATE
-                + ", meetingSlot=" + MEETING_SLOT
-                + ", predicate=" + MATCH_ALL_PREDICATE + "}";
-        assertEquals(expected, command.toString());
+                + "{description=Project sync, meetingDate=2026-04-01, meetingSlot=10:00 to 11:00, predicate="
+                + predicate + "}";
+        assertEquals(expected, meetCommand.toString());
     }
 
-    private static PersonMatchesKeywordsPredicate createPredicate(
-            List<String> compulsoryNameKeywords, List<String> optionalNameKeywords,
-            List<String> compulsoryAddressKeywords, List<String> optionalAddressKeywords,
-            List<String> compulsoryPhoneKeywords, List<String> optionalPhoneKeywords,
-            List<String> compulsoryMajorKeywords, List<String> optionalMajorKeywords,
-            List<String> compulsoryEmailKeywords, List<String> optionalEmailKeywords,
-            List<String> compulsoryTagKeywords, List<String> optionalTagKeywords,
-            List<String> compulsoryPositionKeywords, List<String> optionalPositionKeywords,
-            List<String> compulsoryGroupKeywords, List<String> optionalGroupKeywords,
-            List<String> compulsoryTimeSlotKeywords, List<String> optionalTimeSlotKeywords) {
+    private PersonMatchesKeywordsPredicate createPredicate(
+            List<String> optionalNameKeywords,
+            List<String> optionalGroupKeywords,
+            List<String> optionalMajorKeywords,
+            List<String> optionalPositionKeywords,
+            List<String> optionalTagKeywords) {
         return new PersonMatchesKeywordsPredicate(
-                compulsoryNameKeywords, optionalNameKeywords,
-                compulsoryAddressKeywords, optionalAddressKeywords,
-                compulsoryPhoneKeywords, optionalPhoneKeywords,
-                compulsoryMajorKeywords, optionalMajorKeywords,
-                compulsoryEmailKeywords, optionalEmailKeywords,
-                compulsoryTagKeywords, optionalTagKeywords,
-                compulsoryPositionKeywords, optionalPositionKeywords,
-                compulsoryGroupKeywords, optionalGroupKeywords,
-                compulsoryTimeSlotKeywords, optionalTimeSlotKeywords);
+                Collections.emptyList(), optionalNameKeywords,
+                Collections.emptyList(), Collections.emptyList(),
+                Collections.emptyList(), Collections.emptyList(),
+                Collections.emptyList(), optionalMajorKeywords,
+                Collections.emptyList(), Collections.emptyList(),
+                Collections.emptyList(), optionalTagKeywords,
+                Collections.emptyList(), optionalPositionKeywords,
+                Collections.emptyList(), optionalGroupKeywords,
+                Collections.emptyList(), Collections.emptyList());
     }
 }
-
